# alica-monitoring-agent

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
include/: CapnprotoMessageHandler.h  conversion.h  handler.h  json_helper.h  processing.h
include/conversion/: AlicaEngineInfo.h  AllocationAuthorityInfo.h  EntrypointRobots.h  PlanTreeInfo.h  RoleSwitch.h  SolverResult.h  SolverVar.h  SyncData.h  SyncReady.h  SyncTalk.h
include/emitter/: SerializingVisitor.h  StringificationVisitor.h
include/exception/: MessageHandlingException.h  NoFittingHandlerException.h  StorageException.h
include/handler/: AlicaEngineInfoHandler.h  AllocationAuthorityInfoHandler.h  CapnprotoMessageHandler.h  PerformanceMeasurementHandler.h  PlanTreeInfoHandler.h  RoleSwitchHandler.h  SolverResultHandler.h  SyncReadyHandler.h  SyncTalkHandler.h
include/model/: AlicaEngineInfo.h  AllocationAuthorityInfo.h  EntrypointRobots.h  PlanTreeInfo.h  RoleSwitch.h  SolverResult.h  SolverVar.h  SyncData.h  SyncReady.h  SyncTalk.h
include/serialization/: JsonSerializationStrategy.h  SerializationStrategy.h
include/storage/: SawtoothCliBasedStorage.h  StorageStrategy.h
src/: CapnprotoMessageHandler.cpp  json_helper.cpp  main.cpp  processing.cpp
src/conversion/: AlicaEngineInfo.cpp  AllocationAuthorityInfo.cpp  EntrypointRobots.cpp  PlanTreeInfo.cpp  RoleSwitch.cpp  SolverResult.cpp  SolverVar.cpp  SyncData.cpp  SyncReady.cpp  SyncTalk.cpp
src/emitter/: StringificationVisitor.cpp
test/: CMakeLists.txt  alica_engine_info_capnp_to_json.cpp  allocation_authority_info_capnp_to_json.cpp  plan_tree_info_capnp_to_json.cpp  role_switch_capnp_to_json.cpp  solver_result_capnp_to_json.cpp  sync_ready_capnp_to_json.cpp  sync_talk_capnp_to_json.cpp
test/helper/: CMakeLists.txt
test/helper/include/: test_messages_common.h  test_values_common.h
test/helper/src/: test_messages_common.cpp
test/include/: mocks.h  test_values_common.h
test/src/: capnproto_message_handler.cpp  chain_of_responsibility.cpp  handler_chain_test.cpp  message_handler_test.cpp
test/src/alica_engine_info/: alica_engine_info_from_capnp.cpp  alica_engine_info_to_json.cpp
test/src/allocation_authority_info/: allocation_authority_info_from_capnp.cpp  allocation_authority_info_to_json.cpp
test/src/capnzero_id/: capnzero_id_from_capnp.cpp  capnzero_id_to_json.cpp
test/src/conversion/: alica_engine_info_capnp_to_json.cpp  allocation_authority_info_capnp_to_json.cpp  plan_tree_info_capnp_to_json.cpp  role_switch_capnp_to_json.cpp  solver_result_capnp_to_json.cpp  sync_ready_capnp_to_json.cpp  sync_talk_capnp_to_json.cpp
test/src/conversion/alica_engine_info/: alica_engine_info_from_capnp.cpp  alica_engine_info_to_json.cpp
test/src/conversion/allocation_authority_info/: allocation_authority_info_from_capnp.cpp  allocation_authority_info_to_json.cpp
test/src/conversion/capnzero_id/: capnzero_id_from_capnp.cpp  capnzero_id_to_json.cpp
test/src/conversion/entrypoint_robots/: entrypoint_robots_from_capnp.cpp  entrypoint_robots_to_json.cpp
test/src/conversion/plan_tree_info/: plan_tree_info_from_capnp.cpp  plan_tree_info_to_json.cpp
test/src/conversion/role_switch/: role_switch_from_capnp.cpp  role_switch_to_json.cpp
test/src/conversion/solver_result/: solver_result_from_capnp.cpp  solver_result_to_json.cpp
test/src/conversion/solver_var/: solver_var_from_capnp.cpp  solver_var_to_json.cpp
test/src/conversion/sync_data/: sync_data_from_capnp.cpp  sync_data_to_json.cpp
test/src/conversion/sync_ready/: sync_ready_from_capnp.cpp  sync_ready_to_json.cpp
test/src/conversion/sync_talk/: sync_talk_from_capnp.cpp  sync_talk_to_json.cpp
test/src/entrypoint_robots/: entrypoint_robots_from_capnp.cpp  entrypoint_robots_to_json.cpp
test/src/plan_tree_info/: plan_tree_info_from_capnp.cpp  plan_tree_info_to_json.cpp
test/src/role_switch/: role_switch_from_capnp.cpp  role_switch_to_json.cpp
test/src/solver_result/: solver_result_from_capnp.cpp  solver_result_to_json.cpp
test/src/solver_var/: solver_var_from_capnp.cpp  solver_var_to_json.cpp
test/src/sync_data/: sync_data_from_capnp.cpp  sync_data_to_json.cpp
test/src/sync_ready/: sync_ready_from_capnp.cpp  sync_ready_to_json.cpp
test/src/sync_talk/: sync_talk_from_capnp.cpp  sync_talk_to_json.cpp
(+30 files in other folders)
